src/test/resources/tokens/invalid/integer_out_of_bounds_positive_binary.unpick
unpick v3
const int
    0 = 0b100000000000000000000000000000000